tests/semantic/fail/var-8.tiger
let
	var a : int := a
in
end
